[tool.poetry]
name = "srme"
version = "0.1.1"
description = "System Resource Monitor for Experiments"
authors = ["Ilya Kaftanov"]
readme = "README.md"
homepage = "https://github.com/IKaftanov/srme"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.8"
mlflow = { version = "^2.11.1", optional = true }
pynvml = "^11.5.0"

[tool.poetry.extras]
mlflow = ["mlflow"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
